infra/k8s/tweets.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tweets
spec:
  containers:
    - name: tweets
      image: joshuaombasa/tweets
