infra/k8s/reactions-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactions-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactions
  template:
    metadata:
      labels:
        app: reactions
    spec:
      containers:
        - name: reactions
          image: joshuaombasa/navity-reactions


---


apiVersion: v1
kind: Service
metadata:
  name: reactions
spec:
  selector:
    app: reactions
  ports:
    - name: reactions
      protocol: TCP
      port: 4016
      targetPort: 4016
