infra/k8s/tweets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tweets-depl
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: tweets
  template:
    metadata:
      labels:
        app: tweets
    spec:
      containers:
        - name: tweets
          image: joshuaombasa/navity-tweets


---

apiVersion: v1
kind: Service
metadata:
  name: tweets-srv
spec:
  selector:
    app: tweets
  ports:
    - name: tweets
      protocol: TCP
      port: 4015
      targetPort: 4015
