infra/k8s/tweets-nodeport-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: tweets-nodeport-srv
spec:
  type: NodePort
  selector:
    app: tweets
  ports:
    - name: tweets
      protocol: TCP
      port: 4015
      targetPort: 4015
