infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: navity.com
      http:
        paths:
          - path: /tweets
            pathType: Prefix
            backend:
              service:
                name: tweets-srv
                port: 
                  number: 4015
